<resources>
    <string name="app_name">Story</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="message_validation_name">Your name cannot be empty</string>
    <string name="message_validation_email">Your email format is not valid</string>
    <string name="message_validation_password">Your passwords must be at least 6 characters in length</string>
    <string name="fab_story_map_desc">Go to Story Maps</string>
    <string name="fab_add_story_desc">Add new story</string>
    <string name="username">username</string>
    <string name="welcome">Welcome to Story</string>
    <string name="register_message">Create your account</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="register">Sign Up</string>
    <string name="login_account_message">Already have an account? Login here</string>
    <string name="login">Sign In</string>
    <string name="login_message">Please login to your account</string>
    <string name="register_account_message">Don\'t have an account yet? Please register here</string>
    <string name="desc_camera">Start Camera</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">Upload Story</string>
    <string name="your_location">Your Location</string>
    <string name="location">Latitude: %1$f, Longitude: %2$f</string>
    <string name="add_description">Tell about your story</string>
    <string name="story_image">%s</string>
    <string name="detail_description">detail description</string>
    <string name="description">description</string>
    <string name="capture_image">capture image</string>
    <string name="switch_camera">switch</string>
    <string name="auth">Bearer %1$s</string>
    <string name="error_image_empty">Your image story cannot be empty</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="stories_content_description">story by %1$s</string>
    <string name="marker_snippet">Click to open detail story</string>
    <string name="register_success">Your account has been created. Try login to your account and look stories</string>
    <string name="login_success">Login successfully. Lets look for someone story</string>
    <string name="loading_data">Loading…</string>
    <string name="error">Something\'s wrong, please try again later</string>
    <string name="refresh">Refresh</string>
    <string name="log_out">Log Out</string>
    <string name="languages">Languages</string>
    <string name="message_validation_description">Description cannot be empty</string>
    <string name="appwidget_text">STORY BANNER</string>
    <string name="empty_text">NO DATA</string>
</resources>