<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.story.StoryActivity">

    <ProgressBar
        android:id="@+id/upload_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/desc_camera"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_location"
        app:layout_constraintEnd_toStartOf="@+id/gl_mid_add_story"
        app:layout_constraintStart_toStartOf="@+id/iv_preview" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/iv_preview"
        app:layout_constraintStart_toStartOf="@+id/gl_mid_add_story"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintEnd_toEndOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="@id/iv_preview" />

    <TextView
        android:id="@+id/tv_your_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_location"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="@id/iv_preview" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/tv_your_location"
        app:layout_constraintEnd_toEndOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="@id/iv_preview" />

    <com.dicoding.naim.story.ui.custom.MyEditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_description"
        android:lines="5"
        android:singleLine="false"
        android:gravity="top"
        android:padding="16dp"
        android:inputType="textMultiLine"
        android:background="@drawable/border_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:layout_constraintEnd_toEndOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="@+id/iv_preview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_mid_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>